<resources>
    <string name="app_name">Flex Pay</string>
    <string name="text1">Anurag’s smart payment choice</string>
    <string name="text2">Frustrated with unreliable bank</string>
    <string name="text3">servers and internet woes?</string>
    <string name="text4">Experience seamless and reliable</string>
    <string name="text5">smart payments with flex pay</string>


    <string-array name="countries">
        <item>India</item>

        <item>India</item>
        <item>US</item>
        <item>UK</item>
        <item>Australia</item>
        <item>Russia</item>
        <item>Germany</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="rupee">
\u00e2\u0082\u00b9
</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text1_splash_2">Worried about bank’s server ?</string>
    <string name="text2_splash_2">Flex pay is now the right solution</string>
    <string name="text3_splash_2">for making reliable payments with</string>
    <string name="text4_splash_2">ZERO DOWNTIME</string>
    <string name="goto_symbol"><![CDATA[->]]></string>
    <string name="text1_splash_3">Skip long queues</string>
    <string name="text2_splash_3">You can now skip the long queues</string>
    <string name="text3_splash_3">by using one tap hassleless</string>
    <string name="text4_splash_3">payment system</string>
    <string name="welcome">Welcome,</string>
    <string name="undrawlogo">undrawlogo</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="text10">Don\'t have an account ? SignUp</string>
    <string name="textsignup2">Let’s start flexing your payments</string>
    <string name="signupname">Enter your name</string>
    <string name="signup">Signup</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="enter_roll_number">Enter roll number</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="recharge">Recharge</string>
    <string name="profile">Profile</string>
    <string name="recharge_your_card">Recharge Your Card</string>
    <string name="enter_the_amount">Re-enter the amount</string>
    <string name="enter_the_amount_2">Enter the amount</string>
    <string name="au_pay">FLEX PAY</string>
    <string name="rupee2">₹</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="title_activity_exp">ExpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="image">image</string>
    <string name="title_activity_nfc">NfcActivity</string>
    <string name="latest_transactions">Latest Transactions</string>
    <string name="hi_saketh">Hi, Saketh</string>
    <string name="flex_pay">FLEX PAY</string>
    <string name="total_balance">Total balance</string>
    <string name="vouchers">Vouchers</string>
    <string name="arrow">←</string>


</resources>