<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3F7"

    tools:context=".fragments.LoginFragment">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/app_logo_2" />

    <TextView
        android:id="@+id/text_signup_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_login"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_signup_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/textsignup2" />


    <EditText
        android:id="@+id/etxtsignup"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rectangle"
        android:hint="@string/signupname"

        android:inputType="text"
        android:paddingStart="@dimen/_19sdp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/etxtroll"
        android:layout_width="350dp"
        android:layout_height="wrap_content"

        android:layout_below="@id/etxtsignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rectangle"
        android:hint="@string/enter_roll_number"
        android:inputType="text"
        android:paddingStart="@dimen/_19sdp" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="350dp"

        android:layout_height="wrap_content"
        android:layout_below="@id/etxtroll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rectangle"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_19sdp"

        />

    <EditText
        android:id="@+id/signpass_1"

        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rectangle"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"

        android:paddingStart="@dimen/_19sdp" />

    <EditText
        android:id="@+id/signpass_2"
        android:layout_width="350dp"

        android:layout_height="wrap_content"
        android:layout_below="@id/signpass_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rectangle"
        android:hint="@string/confirm_your_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_19sdp" />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signpass_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle2"
        android:text="@string/signup"
        android:textColor="@color/white" />


</RelativeLayout>