<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/app_logo_2" />

    <TextView
        android:id="@+id/text_login_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_login"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/undraw_login"
        android:layout_width="300dp"
        android:layout_height="200dp"

        android:layout_below="@id/text_login_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/undrawlogo"
        android:src="@drawable/undraw_login" />

    <EditText

        android:id="@+id/email_login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/undraw_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etxt_password_login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etxt_password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle2"
        android:text="Login" />

    <TextView
        android:id="@+id/signuptxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/text10" />
</RelativeLayout>