<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3F7"
    tools:context=".activity.EntryActivity">

    <ImageView

        android:id="@+id/logo_view_3"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-10dp"
        android:foregroundGravity="clip_horizontal"
        app:srcCompat="@drawable/app_logo" />

    <ImageView
        android:id="@+id/splash_undraw_3"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_below="@id/logo_view_3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:foregroundGravity="clip_horizontal"
        android:src="@drawable/onboarding_3" />

    <TextView
        android:id="@+id/text1_3"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_below="@id/splash_undraw_3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/text1_splash_3"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/text2_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1_3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/text2_splash_3" />

    <TextView
        android:id="@+id/text3_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2_3"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/text3_splash_3" />

    <TextView
        android:id="@+id/text4_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3_3"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/text4_splash_3"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btn_3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="300dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rectangle3"
        android:drawableStart="@drawable/baseline_arrow_forward_24_1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        />

</RelativeLayout>